<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.AddStoreActivity">

    <TextView
        android:id="@+id/text_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_store_title"
        android:textSize="28sp"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/purple_500"
        android:contentDescription="@string/back" />

    <EditText
        android:id="@+id/edit_store_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/text_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_store_name"
        android:background="@color/gray"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:inputType="text"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/edit_store_code"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/edit_store_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_store_code"
        android:background="@color/gray"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:inputType="text"
        android:importantForAutofill="no"
        />

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/button_register"
        android:textSize="16sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>