<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="28sp"
        android:textColor="@color/purple_500"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_email"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_email"
        android:contentDescription="@string/hint_login_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        app:tint="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/hint_login_email"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="@id/image_email"
        app:layout_constraintStart_toStartOf="@id/image_email" />

    <ImageView
        android:id="@+id/image_password"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_password"
        android:contentDescription="@string/hint_login_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:tint="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/hint_login_password"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="@id/image_password"
        app:layout_constraintStart_toStartOf="@id/image_password" />

    <TextView
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:text="@string/login"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_not_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_register"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>